Added Logo to Page, generated with https://textcraft.net

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,13 @@ html {
 	text-align: center;
 }
 
+#Footer {
+	text-align: center;
+	margin-bottom: 30px;
+}
+
 #Header {
+	padding: 20px;
 	text-align: center;
 }
 
